--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,45 @@
 languageCode = 'en-us'
 title = "Prakhar's Life"
 theme = 'paper'
+
+baseURL = '/'
+relativeURLs = true
+uglyURLs = true
+
+disqusShortname = 'prakhartiwari0'   # use disqus comments
+
+[params]
+  # color style
+  color = 'linen'                           # linen, wheat, gray, light
+
+  # header social icons
+  twitter = 'prakhartiwari0'               # twitter.com/YOUR_TWITTER_ID
+  github = 'prakhartiwari0'                 # github.com/YOUR_GITHUB_ID
+  instagram = 'prakhartiwari0'           # instagram.com/YOUR_INSTAGRAM_ID
+  linkedin = 'prakhartiwari0'             # linkedin.com/in/YOUR_LINKEDIN_ID
+  mastodon = 'https://mastodon.social/@prakhartiwari0'           # e.g. 'https://mastodon.instance/@xxx'
+  rss = true                                # show rss icon
+
+  # home page profile
+  avatar = 'https://github.com/prakhartiwari0.png' # gravatar email or image url
+  name = 'Prakhar Tiwari'
+  bio = 'Student Developer'
+
+
+  # misc
+  disableHLJS = true                        # disable highlight.js
+  disablePostNavigation = true              # disable post navigation
+  monoDarkIcon = true                       # show monochrome dark mode icon
+  gravatarCdn = 'GRAVATAR_CDN_LINK'         # e.g. 'https://cdn.v2ex.com/gravatar/'
+  graphCommentId = "YOUR_GRAPH_COMMENT_ID"  # use graph comment (disqus alternative)
+  math = true                               # enable KaTeX math typesetting globally
+
+  # giscus 
+[params.giscus]
+  repo = 'YOUR_GISCUS_REPO'                 # see https://giscus.app for more details
+  repoId = 'YOUR_GISCUS_REPO_ID'
+  category = 'YOUR__GISCUS_CATEGORY'
+  categoryId = 'YOUR_GISCUS_CATEGORY_ID'
+  mapping = 'pathname'
+  theme = 'light'
+  lang = 'zh-CN'
