--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ languageCode = 'en-us'
 title = "Prakhar's Life"
 theme = 'paper'
 
-baseURL = 'https://prakhartiwari0.github.io/life/'
+baseURL = '/'
 relativeURLs = true
 uglyURLs = true
 
